added emailjs setup

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,8 @@
 VITE_API_URL=http://localhost:3000/api
+VITE_EMAILJS_PUBLIC_KEY=6J30b951XI9aTJ3ma
+VITE_EMAILJS_SERVICE_ID=service_mgxvhch
+VITE_EMAILJS_TEMPLATE_ID=template_vl8p66u
+
+
+
+
